Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-3208

Exchanges make best effort to route messages if there is an error.

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.11
    • 0.11
    • C++ Broker
    • None

    Description

      If multiple queues are bound to the same routing key,
      then a failure to deliver to one of the queues (e.g. policy limit
      error) could prevent delivery on some of the other queues.

      The exchange should deliver to every queue that did not
      have an error before raising an error.

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            aconway Alan Conway
            aconway Alan Conway
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment